-
Bug
-
Resolution: Done
-
P1: Critical
-
5.10.1, 5.11.1
-
None
-
Samsung S8, Qt 5.11.1 for android, armeabi-v7a GCC 4.9
-
-
45c1473847ad65c4d43f9a605a86439867442883
We are having problems with Samsung devices after 5.9.2 that TextField, TextArea etc components renders all text with caps. We have not tested on all versions after 5.9.2, but 5.10.1 and 5.11.1 has the same issue. You have to click twice on the caps icon for every character entered in the textfield to get the lower version of the character.
Also whats interesting is that if you turn off the feature for auto caps on first letter on i.e. Samsung S8, is that every characters that previously was forced to caps is now typed in lower case. In Qt 5.9.2 there was a problem on Samsung devices that the first character was always in lower case even if this feature was turned on. But there was a fix for this in QTBUG-51865. But after that we are having problems with "Caps Lock". I don't know if its related to this change, but should be easy to reproduce since it happens to every Qml TextField, TextArea etc component we use in our mobile apps.
For Gerrit Dashboard: QTBUG-69398 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
239811,2 | Detect when we are at the sentence boundary | 5.11 | qt/qtbase | Status: MERGED | +2 | 0 |